# Q-Hack-2026-Team-Artificially-Unintelligent

./: .env  .env.example  .gitignore  README.md  agnes_competitor_layer_spec.md  agnes_light_theme_design.md.html  agnes_modular_spec.md  agnes_poc_short.md  explore_database.ipynb  my_ingredient.json  my_ingredient_output.json  my_ingredient_output2.json  next.config.ts  package-lock.json  package.json  ppt  pyproject.toml  requirements.txt  spec.md  tailwind.config.js  vercel.json
.claude/: settings.local.json
api/: index.py  (+1 more)
src/competitor_layer/: demo.py  pyproject.toml
src/competitor_layer/competitor_layer/: candidate_extractor.py  candidate_filter.py  cli.py  config.py  gemini_client.py  prompts.py  search_adapter.py  source_collector.py
src/competitor_layer/examples/: mock_quality_layer.py  output_mock.json
src/competitor_layer/tests/: test_candidate_filter.py  test_contract.py  test_integration.py  test_mock_runner.py  test_schemas.py  test_search_adapter.py  test_source_collector.py
src/quality_verification_layer/: README.md  demo.py  demo_ui.py  pyproject.toml
src/quality_verification_layer/config/: fields.json  source_priority.json
src/quality_verification_layer/demo_evidence/: ascorbic_acid_tds_supplier_a.txt  ascorbic_acid_tds_supplier_b.txt
src/quality_verification_layer/inputs/: sample_input.json
src/quality_verification_layer/outputs/: sample_output.json
src/quality_verification_layer/quality_verification_layer/: __init__.py  aggregation.py  classification.py  cli.py  config.py  evidence_search.py  extraction.py  gemini_wrapper.py  id_generator.py  normalization.py  progress.py  retrieval.py  runner.py  schemas.py  verification.py
src/quality_verification_layer/tests/: conftest.py  test_aggregation.py  test_e2e_live.py  test_integration.py  test_normalization.py  test_retrieval.py  test_schemas.py  test_verification.py
(+79 files in other folders)
