[project]
name = "spherecast"
version = "0.1.0"
description = "Agnes PoC – modular ingredient consolidation decision-support system"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "notebook>=7.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "google-genai>=1.70.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
